examples/test/testpolicy7085.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7085
  namespace: namespace424
spec:
  podSelector:
    matchLabels:
      key24: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value8
      podSelector:
        matchLabels:
          key15: value18
          key17: value35
          key24: value7
